<resources>
    <string name="app_name">购美</string>
    <string name="tv_user_info_manage">账户管理</string>
    <string name="tv_user_order">我的订单</string>
    <string name="tv_user_address">地址管理</string>
    <string name="tv_user_history">发型对比+头皮管理+皮肤管理记录</string>
    <string name="tv_user_service">服务中心</string>
    <string name="tv_user_about">关于购美</string>
    <string name="tv_exit">退出当前账号</string>
    <string name="home_hot_sale">人气热卖</string>
    <string name="home_discount">限时折扣</string>
    <string name="default_address">设置为默认收货地址</string>
    <string name="address_detail">详细地址</string>
    <string name="address_tag">地址标签</string>
    <string name="example_address">例如: 家/公司等等</string>
    <string name="mobile_num">联系电话</string>
    <string name="et_mobile_num">请输入收货人联系电话</string>
    <string name="area_address">所在地区</string>
    <string name="address_area">省/市/区/县</string>
    <string name="add_address">⊕新增地址</string>
</resources>
