<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/layout_title_bar_com" />

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_44"
        android:layout_marginTop="@dimen/dp_10">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_44"
            android:layout_marginLeft="@dimen/dp_10"
            android:orientation="horizontal"
            android:layout_marginStart="@dimen/dp_10">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/address_tag"
                android:textColor="#666"
                android:textSize="@dimen/sp_16" />

            <EditText
                android:textSize="@dimen/sp_16"
                android:id="@+id/et_consignee"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textColor="#333"
                android:background="@drawable/shape_et_login"
                android:hint="@string/example_address"
                android:paddingLeft="@dimen/dp_10"
                android:paddingStart="@dimen/dp_10"
                tools:ignore="RtlSymmetry" />
        </LinearLayout>
    </android.support.v7.widget.CardView>


    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_44"
        android:layout_marginTop="@dimen/dp_10">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_44"
            android:layout_marginLeft="@dimen/dp_10"
            android:orientation="horizontal"
            android:layout_marginStart="@dimen/dp_10">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/mobile_num"
                android:textColor="#666"
                android:textSize="@dimen/sp_16" />

            <EditText
                android:textSize="@dimen/sp_16"
                android:id="@+id/et_consignee_tel"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textColor="#333"
                android:background="@drawable/shape_et_login"
                android:hint="@string/et_mobile_num"
                android:paddingLeft="@dimen/dp_10"
                android:paddingStart="@dimen/dp_10"
                tools:ignore="RtlSymmetry" />
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_44"
        android:layout_marginTop="@dimen/dp_10">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_44"
            android:layout_marginLeft="@dimen/dp_10"
            android:orientation="horizontal"
            android:layout_marginStart="@dimen/dp_10">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/area_address"
                android:textColor="#666"
                android:textSize="@dimen/sp_16" />

            <EditText
                android:textColor="#333"
                android:textSize="@dimen/sp_16"
                android:id="@+id/et_address"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/shape_et_login"
                android:hint="@string/address_area"
                android:paddingLeft="@dimen/dp_10"
                android:paddingStart="@dimen/dp_10"
                tools:ignore="RtlSymmetry" />
        </LinearLayout>
    </android.support.v7.widget.CardView>


    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginTop="@dimen/dp_10">
        <EditText
            android:textSize="@dimen/sp_16"
            android:textColor="#333"
            android:maxEms="100"
            android:paddingTop="@dimen/dp_6"
            android:gravity="top"
            android:id="@+id/et_address_detail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/shape_et_login"
            android:hint="@string/address_detail"
            android:paddingLeft="@dimen/dp_10"
            android:paddingStart="@dimen/dp_10"
            tools:ignore="RtlSymmetry" />
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="@dimen/dp_10">
        <CheckBox
            android:textSize="@dimen/sp_16"
            android:textColor="#666"
            android:paddingLeft="@dimen/dp_10"
            style="@style/cb_address"
            android:id="@+id/cb_check"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:text="@string/default_address"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/dp_6"
            android:layout_marginStart="@dimen/dp_6"
            android:paddingStart="@dimen/dp_10"
            tools:ignore="RtlSymmetry" />
    </android.support.v7.widget.CardView>
</LinearLayout>